--- a/res/layout/activity_secretary_question_detail_item.xml
+++ b/res/layout/activity_secretary_question_detail_item.xml
@@ -24,7 +24,7 @@
                 style="@style/secretary_head_small_80" />
         </LinearLayout>
 
-        <TextView
+        <com.lansun.qmyo.view.TextPage
             android:id="@+id/tv_user_question"
             style="@style/text_style_nomal_28"
             android:layout_marginLeft="@dimen/l_r_35"
@@ -32,7 +32,15 @@
             android:background="@drawable/secretary_user_dialog"
             android:gravity="center_vertical"
             android:paddingRight="@dimen/l_r_50"
-            android:textColor="@color/text_black_1" />
+            android:textColor="@color/text_black_1"
+            
+            android:longClickable="true"
+            android:linksClickable="true"
+            android:autoLink="all"
+            android:textIsSelectable="true"
+            android:cursorVisible="true"
+            
+             />
     </RelativeLayout>
 
     <RelativeLayout
@@ -55,7 +63,8 @@
                 android:id="@+id/iv_secretary_head"
                 style="@style/secretary_head_small_80" />
         </LinearLayout>
-        <TextView
+       
+         <com.lansun.qmyo.view.TextPage
             android:id="@+id/tv_secretary_answer"
             style="@style/text_style_nomal_28"
             android:layout_marginLeft="@dimen/l_r_20"
@@ -64,7 +73,14 @@
             android:gravity="center_vertical"
             android:paddingLeft="@dimen/l_r_50"
             android:paddingRight="@dimen/l_r_35"
-            android:textColor="@color/text_black_2" />
+            android:textColor="@color/text_black_2" 
+            
+            android:longClickable="true"
+            android:linksClickable="true"
+            android:autoLink="web"
+            android:textIsSelectable="true"
+            android:cursorVisible="true"
+            />
 
        
     </RelativeLayout>
