--- a/res/layout/fragment_secretary_edit.xml
+++ b/res/layout/fragment_secretary_edit.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/w_match_h_match" 
-    android:background="@color/app_white"
-    android:foreground="@drawable/bg_leaf_2"
-    >
+    style="@style/w_match_h_match"
+    android:background="@drawable/bg_leaf_1" >
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="@null"
-        >
-        <LinearLayout
+        android:scrollbars="@null" >
+
+        <RelativeLayout
             style="@style/w_match_h_match"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_gravity="center"
+             >
 
             <FrameLayout
                 android:id="@+id/frameLayout1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/margin_top_200" >
+                 >
 
                 <com.android.pc.ioc.image.RecyclingImageView
                     android:id="@+id/bt_close"
@@ -37,7 +38,18 @@
                     android:background="@drawable/secretary_defaulthead" />
             </FrameLayout>
 
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_below="@id/frameLayout1"
+                style="@style/text_style_small_24"
+                android:layout_marginTop="@dimen/margin_top_25"
+                android:gravity="center"
+                android:text="@string/click_me_change_head" />
+
             <RelativeLayout
+                android:id="@+id/rel"
+                android:layout_below="@id/textView1"
+                android:layout_centerHorizontal="true"
                 android:layout_width="@dimen/register_edit_w"
                 android:layout_height="@dimen/register_edit_h"
                 android:layout_gravity="center_horizontal"
@@ -48,14 +60,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/button_validation"
-                    android:hint="请先给我个名字吧"
+                    android:hint="给我设置个昵称吧"
+                    android:maxLength="12"
                     android:maxLines="1"
                     android:paddingLeft="@dimen/l_r_35"
                     android:paddingRight="25dp"
                     android:singleLine="true"
-                    android:maxLength="12"
-                    android:textSize="14sp"
-                    android:textColor="@color/app_white" />
+                    android:textColor="@color/app_white"
+                    android:textColorHint="@color/app_white"
+                    android:textSize="14sp" />
 
                 <com.android.pc.ioc.image.RecyclingImageView
                     android:id="@+id/iv_activity_del"
@@ -64,9 +77,14 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="5dp"
-                    android:src="@drawable/search_delete" />
+                    android:src="@drawable/search_delete"
+                    android:visibility="invisible" />
             </RelativeLayout>
+
             <RelativeLayout
+                android:id="@+id/rel_bottom"
+                android:layout_below="@id/rel"
+                android:layout_centerHorizontal="true"
                 android:layout_width="@dimen/register_edit_w"
                 android:layout_height="@dimen/register_edit_h"
                 android:layout_gravity="center_horizontal"
@@ -77,14 +95,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/button_validation"
+                    android:hint="请问如何称呼您"
+                    android:maxLength="12"
                     android:maxLines="1"
-                    android:textSize="14sp"
                     android:paddingLeft="@dimen/l_r_35"
                     android:paddingRight="25dp"
-                    android:maxLength="12"
-                    android:hint="@string/hope_call_you"
                     android:singleLine="true"
-                    android:textColor="@color/app_white" >
+                    android:textColor="@color/app_white"
+                    android:textColorHint="@color/app_white"
+                    android:textSize="14sp" >
                 </EditText>
 
                 <com.android.pc.ioc.image.RecyclingImageView
@@ -94,12 +113,15 @@
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_marginRight="5dp"
-                    android:src="@drawable/search_delete" />
+                    android:src="@drawable/search_delete"
+                    android:visibility="invisible" />
             </RelativeLayout>
 
             <TextView
+                android:layout_below="@id/rel_bottom"
                 android:id="@+id/btn_secretary_save"
                 style="@style/text_style_nomal_28"
+                android:layout_centerHorizontal="true"
                 android:layout_width="@dimen/register_item_w"
                 android:layout_height="@dimen/register_item_h"
                 android:layout_gravity="center_horizontal"
@@ -108,7 +130,7 @@
                 android:gravity="center"
                 android:text="@string/save"
                 android:textColor="@color/app_white" />
-        </LinearLayout>
+        </RelativeLayout>
     </ScrollView>
 
     <com.android.pc.ioc.image.RecyclingImageView
