--- a/res/layout/task_dialog.xml
+++ b/res/layout/task_dialog.xml
@@ -2,23 +2,46 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_white"
     android:gravity="center_horizontal"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/textView1"
-        style="@style/text_style_big_34"
-        android:layout_marginTop="@dimen/margin_top_35"
-        android:text="@string/task_success"
-        android:textColor="@color/app_green1" />
-
-    <com.android.pc.ioc.image.RecyclingImageView
-        android:id="@+id/imageView1"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/margin_top_35"
-        android:layout_marginTop="@dimen/margin_top_35"
-        android:src="@drawable/task_success" />
+        android:gravity="center_horizontal"
+        android:background="@drawable/tv_style_white"
+        android:orientation="vertical" >
+
+        <TextView
+            android:id="@+id/textView1"
+            style="@style/text_style_big_34"
+            android:layout_marginTop="@dimen/margin_top_35"
+            android:text="@string/task_success"
+            android:textColor="@color/app_green1" />
+
+        <TextView
+            android:id="@+id/textView2"
+            style="@style/text_style_big_32"
+            android:layout_marginTop="5dp"
+            android:text="2小时内必有回复"
+            android:textColor="#AEAEAE" />
+
+        <com.android.pc.ioc.image.RecyclingImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_top_35"
+            android:layout_marginTop="@dimen/margin_top_35"
+            android:src="@drawable/task_success" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/iknow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/buton_shape"
+        android:layout_marginTop="30dp"
+        android:text="我知道咯"
+        android:textColor="@color/app_white" />
 
 </LinearLayout>
