--- a/res/values/themes_basic.xml
+++ b/res/values/themes_basic.xml
@@ -135,6 +135,11 @@
         <item name="android:textSize">@dimen/text_size_24</item>
         <item name="android:textColor">#939393</item>
     </style>
+    <style name="text_style_small_25" parent="w_match_h_wrap">
+        <item name="android:shadowColor">@android:color/black</item>
+        <item name="android:textSize">@dimen/text_size_24</item>
+        <item name="android:textColor">#939393</item>
+    </style>
       <style name="text_style_small_27" parent="w_wrap_h_wrap">
         <item name="android:shadowColor">@android:color/black</item>
         <item name="android:textSize">@dimen/text_size_27</item>
