--- a/res/layout/activity_secretary.xml
+++ b/res/layout/activity_secretary.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/com.lansun.qmyo"
     style="@style/w_full_h_wrap"
-    android:background="@drawable/bg_leaf_1" >
+    android:background="@drawable/bg_main" >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -24,21 +26,23 @@
                     android:id="@+id/ll_secretary_setting"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginRight="-10dp"
                     android:layout_marginLeft="@dimen/l_r_35"
                     android:background="@drawable/circle_background_gray"
                     android:gravity="center"
                     android:orientation="vertical" >
-
-                    <com.lansun.qmyo.view.CircularImage
-                        android:layout_width="5dp"
-                        android:layout_height="5dp"
-                        android:background="#af00" />
 
                     <com.android.pc.ioc.image.RecyclingImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/secretary_setting" />
                 </LinearLayout>
+
+                <TextView
+                    android:layout_toRightOf="@id/ll_secretary_setting"
+                    android:layout_width="10dp"
+                    android:layout_height="10dp"
+                    android:background="@drawable/circle_shape" />
 
                 <LinearLayout
                     android:id="@+id/ll_secretary_help"
@@ -66,22 +70,21 @@
                 android:background="@drawable/secretary_headportrait_small"
                 android:gravity="center" >
 
-                <com.lansun.qmyo.view.CircularImage
+                <com.lansun.qmyo.override.CircleImageView
                     android:id="@+id/iv_secretary_head"
                     style="@style/secretary_head_small"
-                    android:background="@drawable/secretary_default_avatar" />
+                    android:src="@drawable/secretary_default_avatar"
+                    app:circle_border_color="#00000000" />
             </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_secretary_name"
-                style="@style/text_style_small_24"
+                style="@style/text_style_small_25"
                 android:layout_below="@+id/linearLayout1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/margin_top_18"
-                android:background="@drawable/tv_style_green"
+                android:background="@drawable/buton_shape"
                 android:gravity="center"
-                android:paddingLeft="@dimen/l_r_25"
-                android:paddingRight="@dimen/l_r_25"
                 android:textColor="@color/app_white" />
 
             <TextView
@@ -89,8 +92,7 @@
                 style="@style/text_style_small_22"
                 android:layout_below="@+id/tv_secretary_name"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="@dimen/margin_top_15"
-                android:text="adajsdlkajsdlk" />
+                android:layout_marginTop="@dimen/margin_top_15" />
 
             <LinearLayout
                 android:id="@+id/ll_secretary_ll1"
@@ -112,7 +114,7 @@
                         android:src="@drawable/secretary_travelholiday_1" />
 
                     <TextView
-                        style="@style/text_style_small_24"
+                        style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/travel_holiday"
                         android:textColor="#6F6F6F" />
@@ -130,7 +132,7 @@
                         android:background="@drawable/secretary_newproduct_1" />
 
                     <TextView
-                        style="@style/text_style_small_24"
+                        style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/new_shopping"
                         android:textColor="#6F6F6F" />
@@ -148,7 +150,7 @@
                         android:background="@drawable/secretary_dinnerparty_1" />
 
                     <TextView
-                        style="@style/text_style_small_24"
+                        style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/shengyan_part"
                         android:textColor="#6F6F6F" />
@@ -175,7 +177,7 @@
                         android:src="@drawable/secretary_qualitylife_1" />
 
                     <TextView
-                        style="@style/text_style_small_24"
+                        style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/gaozhi_life"
                         android:textColor="#6F6F6F" />
@@ -193,7 +195,7 @@
                         android:background="@drawable/secretary_studyabroad_1" />
 
                     <TextView
-                        style="@style/text_style_small_24"
+                        style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/studybroad"
                         android:textColor="#6F6F6F" />
@@ -211,7 +213,7 @@
                         android:background="@drawable/secretary_investment_1" />
 
                     <TextView
-                        style="@style/text_style_small_24"
+                        style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/licai_touzi"
                         android:textColor="#6F6F6F" />
@@ -233,7 +235,7 @@
                     android:background="@drawable/secretary_handlecard_1" />
 
                 <TextView
-                    style="@style/text_style_small_24"
+                    style="@style/text_style_small_25"
                     android:layout_marginTop="@dimen/margin_top_20"
                     android:text="@string/handlecard"
                     android:textColor="#6F6F6F" />
