--- a/res/layout/secretary_detail_footer.xml
+++ b/res/layout/secretary_detail_footer.xml
@@ -2,36 +2,54 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/app_white"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/margin_top_35"
-    android:paddingLeft="@dimen/l_r_35"
-    android:paddingRight="@dimen/l_r_35"
-    android:paddingTop="@dimen/margin_top_35" >
-
-    <TextView
-        style="@style/text_style_nomal_28"
-        android:text="@string/take_question_form" />
-
-    <EditText
-        android:id="@+id/et_secretary_form_content"
-        style="@style/text_style_small_24"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/secretary_form_h"
-        android:layout_marginTop="@dimen/margin_top_35"
-        android:background="@drawable/tv_style_gray"
-        android:gravity="top"
-        android:paddingLeft="@dimen/l_r_35"
-        android:paddingRight="@dimen/l_r_35"
-        android:paddingTop="@dimen/margin_top_35" />
-
-    <Button
-        android:id="@+id/btn_secretary_commit_form"
+    android:background="#EBEBEB"
+    android:orientation="vertical" >
+ <LinearLayout
+        android:id="@+id/relativeLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin_top_35"
-        android:background="@drawable/button"
-        android:text="@string/secretary_renwu"
-        android:textColor="@color/app_white" />
+        android:background="@color/app_white"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
 
+        <com.android.pc.ioc.image.RecyclingImageView
+            android:id="@+id/iv_activity_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/back" />
+
+        <TextView
+            android:id="@+id/catlog_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="新建任务指派"
+            android:textColor="@color/app_green1"
+            android:textSize="16sp" />
+
+       	<TextView 
+       	    android:id="@+id/btn_secretary_commit_form" 
+       	    android:layout_width="wrap_content"
+       	    android:layout_height="wrap_content"
+       	    android:text="提交"
+       	    android:layout_marginRight="16dp"
+       	    android:textColor="#AFAFAF"
+       	    android:padding="10dp"
+       	    />
+    </LinearLayout>
+    <View style="@style/line_style_1"></View>
+    <EditText
+        android:id="@+id/et_secretary_form_content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/app_white"
+        android:lines="15"
+        android:textSize="14sp"
+        android:padding="17dp"
+        android:gravity="top"
+        android:textColorHint="#AFAFAF"
+        android:lineSpacingExtra="4dp"
+        android:maxLines="20"
+        />
 </LinearLayout>
