--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical" 
     android:background="@color/app_bg">
 
+    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -16,16 +17,36 @@
             android:background="@color/app_bg"
             android:layout_marginBottom="@dimen/bottom_menu_h"
             android:orientation="vertical" >
-
-            <com.lansun.qmyo.view.MyListView
-                android:id="@+id/lv_home_list"
-                style="@style/w_h_full"
-                android:background="#EBEBEB"
-                android:cacheColorHint="#00000000"
-                android:divider="@null"
-                android:listSelector="@android:color/transparent"
-                android:scrollbars="vertical" 
-                />
+            
+            <com.handmark.pulltorefresh.library.PullToRefreshScrollView
+                android:id="@+id/sv_homefrag"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"> 
+	           
+                <LinearLayout 
+	                android:id="@+id/ll_homefrag"
+	                android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+	                android:orientation="vertical">
+	              
+		         	<include  
+		         	    android:id="@+id/head_banner"
+		         	    layout="@layout/activity_home_banner"/>
+		         	    
+		            <com.lansun.qmyo.view.MyListView
+		                android:id="@+id/lv_home_list"
+		                android:layout_width="match_parent"
+	                    android:layout_height="wrap_content"
+		                android:background="#EBEBEB"
+		                android:cacheColorHint="#00000000"
+		                android:divider="@null"
+		                android:listSelector="@android:color/transparent"
+		                android:scrollbars="vertical" />
+	            
+	            </LinearLayout>
+            </com.handmark.pulltorefresh.library.PullToRefreshScrollView> 
+      
+            
 
             <!-- 这个暂时被gone掉的横条就是  将来动画要让其展现的横条 -->
             <include
@@ -90,7 +111,9 @@
         <!-- 底部的四个按钮 -->
         <!-- android:layout_marginTop="@dimen/l_r_35" -->
         <include
-            layout="@layout/bottom_menu" />
+            layout="@layout/bottom_menu" 
+           
+            /> 
     </RelativeLayout>
 
 </LinearLayout>
