--- a/res/layout/activity_secretary.xml
+++ b/res/layout/activity_secretary.xml
@@ -39,8 +39,10 @@
                 </LinearLayout>
 
                 <TextView
+                    android:id="@+id/have_information"
                     android:layout_toRightOf="@id/ll_secretary_setting"
                     android:layout_width="10dp"
+                    android:visibility="gone"
                     android:layout_height="10dp"
                     android:background="@drawable/circle_shape" />
 
@@ -57,7 +59,7 @@
                         android:id="@+id/bt_close"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/secretary_help_1" />
+                        android:src="@drawable/secretary_help" />
                 </LinearLayout>
             </RelativeLayout>
 
@@ -79,19 +81,20 @@
 
             <TextView
                 android:id="@+id/tv_secretary_name"
-                style="@style/text_style_small_25"
+                style="@style/text_style_small_24"
                 android:layout_below="@+id/linearLayout1"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/margin_top_18"
-                android:background="@drawable/buton_shape"
+                android:background="@drawable/secretary_shape"
                 android:gravity="center"
+                android:text="迈界小秘书"
                 android:textColor="@color/app_white" />
-
             <TextView
                 android:id="@+id/tv_secretary_tip1"
                 style="@style/text_style_small_22"
                 android:layout_below="@+id/tv_secretary_name"
                 android:layout_centerHorizontal="true"
+                android:text="请选择一个类别事项，让我快速帮您解决吧"
                 android:layout_marginTop="@dimen/margin_top_15" />
 
             <LinearLayout
@@ -117,6 +120,7 @@
                         style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/travel_holiday"
+                        android:gravity="center"
                         android:textColor="#6F6F6F" />
                 </LinearLayout>
 
@@ -135,6 +139,7 @@
                         style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/new_shopping"
+                        android:gravity="center"
                         android:textColor="#6F6F6F" />
                 </LinearLayout>
 
@@ -153,6 +158,7 @@
                         style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/shengyan_part"
+                        android:gravity="center"
                         android:textColor="#6F6F6F" />
                 </LinearLayout>
             </LinearLayout>
@@ -180,6 +186,7 @@
                         style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/gaozhi_life"
+                        android:gravity="center"
                         android:textColor="#6F6F6F" />
                 </LinearLayout>
 
@@ -198,6 +205,7 @@
                         style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/studybroad"
+                        android:gravity="center"
                         android:textColor="#6F6F6F" />
                 </LinearLayout>
 
@@ -216,6 +224,7 @@
                         style="@style/text_style_small_25"
                         android:layout_marginTop="@dimen/margin_top_20"
                         android:text="@string/licai_touzi"
+                        android:gravity="center"
                         android:textColor="#6F6F6F" />
                 </LinearLayout>
             </LinearLayout>
@@ -238,6 +247,7 @@
                     style="@style/text_style_small_25"
                     android:layout_marginTop="@dimen/margin_top_20"
                     android:text="@string/handlecard"
+                    android:gravity="center"
                     android:textColor="#6F6F6F" />
             </LinearLayout>
         </RelativeLayout>
