--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -5,6 +5,8 @@
     android:background="@color/app_white"
     android:orientation="vertical" >
 
+    
+    <!-- 云图被压在最底下作为背景图 -->
     <com.lansun.qmyo.view.CloudView
         android:id="@+id/iv_register_bg"
         android:layout_width="match_parent"
@@ -18,8 +20,7 @@
         <RelativeLayout
             android:id="@+id/rl_register_dialog"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-             >
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/tv_register_reg_login"
