--- a/res/layout/fragment_secretary_edit.xml
+++ b/res/layout/fragment_secretary_edit.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/w_match_h_match"
-    android:background="@drawable/bg_leaf_1" >
+    android:background="@drawable/bg_leaf_1" 
+    xmlns:app="http://schemas.android.com/apk/res/com.lansun.qmyo">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -17,31 +18,27 @@
 
             <FrameLayout
                 android:id="@+id/frameLayout1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                 style="@style/w_wrap_h_wrap"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
+                android:background="@drawable/secretary_headportrait_big"
                  >
-
-                <com.android.pc.ioc.image.RecyclingImageView
-                    android:id="@+id/bt_close"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/secretary_headportrait_big" />
-
                 <com.lansun.qmyo.view.CircularImage
                     android:id="@+id/iv_secretary_head"
                     style="@style/secretary_head_big"
-                    android:layout_width="@dimen/secretary_head_w_235"
-                    android:layout_height="@dimen/secretary_head_h_235"
                     android:layout_gravity="center"
-                    android:background="@drawable/secretary_defaulthead" />
+                    />
+               <!--<com.android.pc.ioc.image.RecyclingImageView
+                    android:id="@+id/bt_close"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/secretary_headportrait_big"/>-->
             </FrameLayout>
 
             <TextView
                 android:id="@+id/textView1"
                 android:layout_below="@id/frameLayout1"
-                style="@style/text_style_small_24"
+                style="@style/text_style_small_25"
                 android:layout_marginTop="@dimen/margin_top_25"
                 android:gravity="center"
                 android:text="@string/click_me_change_head" />
@@ -61,7 +58,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/button_validation"
                     android:hint="给我设置个昵称吧"
-                    android:maxLength="12"
+                    android:maxLength="8"
                     android:maxLines="1"
                     android:paddingLeft="@dimen/l_r_35"
                     android:paddingRight="25dp"
@@ -96,7 +93,7 @@
                     android:layout_height="match_parent"
                     android:background="@drawable/button_validation"
                     android:hint="请问如何称呼您"
-                    android:maxLength="12"
+                    android:maxLength="8"
                     android:maxLines="1"
                     android:paddingLeft="@dimen/l_r_35"
                     android:paddingRight="25dp"
